--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=http://localhost:5000/api
+VITE_API_BASE_URL=https://expense-ttracker.onrender.com/api
+VITE_BASE_URL=https://expense-ttracker.onrender.com
